options: fixed header, added quick jump menu

--- a/EXT pub/options.css
+++ b/EXT pub/options.css
@@ -7,9 +7,10 @@ body {
 	background: #f9f9f9;
 }
 .main   {
-	padding: 10px;
+	padding: 90px 10px 10px;
 	width: 990px;
 	margin: 0 auto;
+    position: relative;
 }
 h1  {
 	font-weight: 600;
@@ -40,13 +41,19 @@ a.external:before {
 	border-bottom: 1px solid lightgray;
 }
 .heading    {
-	position: relative;
+	position: fixed;
+	top: 0;
+	z-index: 1;
+	padding-top: 10px;
+    width: inherit;
+	background: #f9f9f9;
 }
 .heading header {
-	position: absolute;
+	/*position: absolute;
 	top: 0;
-	right: 0;
+	right: 0;*/
 	text-align: right;
+	float: right;
 }
 .heading h1 {
 	margin-top: 0px;
@@ -58,8 +65,8 @@ a.external:before {
 }
 .heading a.link-block {
 	position: absolute;
-	width: 100%;    height: 100%;
-	top: 0; left: 0;
+	width: 40%;    height: 100%;
+	top: 0; right: 0;
 }
 .clear  {
 	clear: both;
@@ -550,6 +557,35 @@ label.primary span  {
 	0% { background-color: #fff; }
 	30% { background-color: #f6ffe2; }
 	100% { background-color: #fff; }
+}
+
+/* jump toolbar */
+.jump-toolbar  {
+	position: fixed;
+	top: 100px;
+	right: 5%;
+	background: #eee;
+	width: 100px;
+	padding: 10px;
+	opacity: 0.5;
+	transition: opacity 0.3s;
+}
+.jump-toolbar:hover  {
+	opacity: 1;
+}
+.jump-toolbar > span  {
+    display: inline-block;
+	margin-bottom: 4px;
+}
+.jump-toolbar > div {
+	font-size: 120%;
+	padding: 6px;
+	border: 1px solid #eee;
+}
+.jump-toolbar > div:hover {
+	background: #ddd;
+	border: 1px solid #ccc;
+	cursor: pointer;
 }
 
 /* ajax */
